# DeviceStudio

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  dev.bat
.codebuddy/plans/: DeviceStudio_设计文档编写计划_0061df9f.md
.github/workflows/: build.yml
cmake/: CompilerOptions.cmake  Dependencies.cmake
config/: default.json
config/protocols/: modbus_rtu_sample.json
docs/: 产品设计文档.md  功能实现状态.md  协议描述文件规范.md  存储设计文档.md  接口设计文档.md  插件开发指南.md  测试设计文档.md  用户操作手册.md  通信协议文档.md  部署安装手册.md
examples/: demo_project.dsproj  demo_script.txt
resources/: ICONS_README.md  resources.qrc
resources/protocols/: modbus_rtu_template.json  temp_sensor.json
resources/themes/: dark.qss  light.qss
src/communication/: CMakeLists.txt
src/communication/can/: canbus.cpp  canbus.h
src/communication/modbus/: modbusdevice.cpp  modbusdevice.h
src/communication/serial/: serialport.cpp  serialport.h
src/communication/tcp/: tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h
src/communication/udp/: udpsocket.cpp  udpsocket.h
src/core/: CMakeLists.txt
src/core/datacenter/: dataplayer.cpp  dataplayer.h  datarecorder.cpp  datarecorder.h  datastore.cpp  datastore.h  idatacenter.h
src/core/devicemanager/: device.cpp  device.h  devicemanager.cpp  devicemanager.h  idevice.h  idevicemanager.h
src/core/project/: project.cpp  project.h  workspace.cpp  workspace.h
src/core/protocol/: checksum.cpp  checksum.h  protocoldefinition.h  protocolengine.cpp  protocolengine.h  protocolparser.cpp  protocolparser.h
src/core/scriptengine/: luascriptengine.cpp  luascriptengine.h  scriptcommands.h  scriptexecutor.cpp  scriptexecutor.h  scriptparser.cpp  scriptparser.h
src/main/: main.cpp
src/plugin/: CMakeLists.txt  iplugin.h  pluginloader.cpp  pluginloader.h  pluginmanager.cpp  pluginmanager.h
src/plugin/examples/: CMakeLists.txt  customprotocol.json  customprotocolplugin.cpp  customprotocolplugin.h  mockcommunication.json  mockcommunicationplugin.cpp  mockcommunicationplugin.h
src/ui/: CMakeLists.txt  shortcutmanager.cpp  shortcutmanager.h  thememanager.cpp  thememanager.h
src/ui/devicepanel/: devicepanel.cpp  devicepanel.h
src/ui/dialogs/: deviceconfigdialog.cpp  deviceconfigdialog.h  settingsdialog.cpp  settingsdialog.h
src/ui/mainwindow/: mainwindow.cpp  mainwindow.h
src/ui/monitor/: datamonitorpanel.cpp  datamonitorpanel.h
src/ui/scripteditor/: scripteditorwidget.cpp  scripteditorwidget.h
src/ui/terminal/: terminalwidget.cpp  terminalwidget.h
src/utils/: CMakeLists.txt
src/utils/config/: configmanager.cpp  configmanager.h
src/utils/log/: logger.cpp  logger.h
src/visualization/: CMakeLists.txt
src/visualization/chart/: channelmanager.cpp  channelmanager.h  chartwidget.cpp  chartwidget.h
src/visualization/gauge/: bargauge.cpp  bargauge.h  gaugewidget.cpp  gaugewidget.h  ledindicator.cpp  ledindicator.h  switchindicator.cpp  switchindicator.h
template/: build.bat  dev.bat
tests/: CMakeLists.txt  main.cpp  test_protocol.cpp
tests/core/: test_device.cpp  test_devicemanager.cpp  test_project.cpp
tests/utils/: test_configmanager.cpp  test_logger.cpp
